force-app/main/default/objects/Municipios__mdt/Municipios__mdt.object-meta.xml
<CustomObject>
    <label>Municipio</label>
    <pluralLabel>municipios</pluralLabel>
</CustomObject>