force-app/main/default/objects/Municipios__mdt/fields/CodAuto__c.field-meta.xml
<CustomField>
    <fullName>CodAuto__c</fullName>
    <description>Código de la comunidad autónoma</description>
    <inlineHelpText>Código de la comunidad autónoma</inlineHelpText>
    <label>CodAuto</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>