force-app/main/default/objects/Municipios__mdt/fields/CodMun__c.field-meta.xml
<CustomField>
    <fullName>CodMun__c</fullName>
    <description>Código del Municipio</description>
    <label>CodMun</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>