force-app/main/default/objects/Municipios__mdt/fields/CodPro__c.field-meta.xml
<CustomField>
    <fullName>CodPro__c</fullName>
    <description>Código de la provincia</description>
    <inlineHelpText>Código de la provincia</inlineHelpText>
    <label>CodPro</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>