force-app/main/default/objects/Municipios__mdt/fields/DigControl__c.field-meta.xml
<CustomField>
    <fullName>DigControl__c</fullName>
    <label>DigControl</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>